# MyRayTracer

./: .gitignore  MyRayTracer.sln
MyRayTracer/: CMakeLists.txt  Camera.cpp  Camera.h  HitInfo.cpp  HitInfo.h  Light.h  Makefile  MyImage.cpp  MyImage.h  MyMaterial.cpp  MyMaterial.h  MyObject.cpp  MyObject.h  MyRayTracer.vcxproj  MyRayTracer.vcxproj.filters  MySphere.cpp  MySphere.h  MyTriangle.cpp  MyTriangle.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  RenderSettings.cpp  RenderSettings.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  build.sh  main.cpp  mytest.test  readfile.cpp  readfile.h  variables.h
